# 4x-game-agent

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_game.md
.github/workflows/: ci.yml
agent/: __init__.py  adb.py  appium_interface.py  dashboard.py  llm.py  ocr.py  reflection.py  template_match.py
agent/tests/: conftest.py  test_llm.py  test_ocr.py  test_reflection.py  test_template_match.py
docs/: adding-a-game.md  architecture.md  cost-analysis.md
docs/promotion/: devto_article.md  hackernews.md  reddit_gamedev.md  reddit_machinelearning.md  twitter.md
games/_template/: README.md  config.yaml  coordinate_map.py  knowledge.py  main.py  screen_analyzer.py  state_machine.py
games/kingshot/: README.md  __init__.py  building_finder.py  config.yaml  coordinate_map.py  engine.py  knowledge.py  main.py  ocr.py  prompts.py  screen_analyzer.py  state_machine.py  strategy.py  workflow_engine.py  world_model.py
games/kingshot/tests/: conftest.py  test_ocr.py
